Changed color of Health Level counters. In the README.md, added a link to the game's live site.

--- a/style.css
+++ b/style.css
@@ -51,10 +51,10 @@ h2 {
 }
 
 .userHealthLevelCount {
-  color: #8f229b;
+  color: orange;
 }
 .computerHealthLevelCount {
-  color: #8f229b;
+  color: orange;
 }
 
 .callToAction {
